--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -77,10 +77,6 @@
           font-size: 2rem;
           margin-bottom: $gutter * 1.3;
         }
-
-        .reg {
-          vertical-align: middle;
-        }
       }
 
       p {
