--- a/sass/util/_global.scss
+++ b/sass/util/_global.scss
@@ -24,3 +24,7 @@ p + p {
     vertical-align: top;
   }
 }
+
+.reg {
+  vertical-align: sub;
+}
